# zed-python-api

./: .gitlab-ci.yml  LICENSE  README.md  appveyor.yml  requirements.txt  setup.py
cupy/: test_cupy_integration.py
doc/source/: allclasses.rst  conf.py  core.rst  depth.rst  index.rst  positional.rst  spatial.rst  video.rst
examples/: README.md  live_camera.py  mesh_example.py  multi_camera.py  plane_example.py  position_example.py  read_svo.py
examples/camera_control/: camera_control.py
examples/multi camera/: multi_camera.py
examples/multi_camera/: multi_camera.py
examples/object detection/: object_detection_2d.py
examples/plane_detection/: plane_detection.py
examples/positional_tracking/: positional_tracking.py  tracking_viewer.py  zed_model.py
examples/spatial_mapping/: spatial_mapping.py
examples/svo_recording/: ZED_SVO_Export.py  ZED_SVO_Recording.py  svo_export.py  svo_playback.py  svo_recording.py
pyzed/: README.md  Utils.cpp  camera.pxd  camera.pyx  core.pxd  core.pyx  defines.pxd  defines.pyx  mesh.pxd  mesh.pyx  sl.pyx  sl_c.pxd  types.pxd  types.pyx
src/: README.md  generate_pyzed_stubs.py  pyproject.toml  requirements.txt  requirements_legacy.txt  setup.py
src/pyzed/: .gitignore  Utils.cpp  sl.pyx  sl_c.pxd
tutorials/: 2_image_capture.py  3_depth_sensing.py  4_positional_tracking.py  5_spatial_mapping.py  depth_sensing.py  hello_zed.py  image_capture.py  positional_tracking.py  spatial_mapping.py
tutorials/tutorial 6 - object detection/: README.md  object_detection.py
tutorials/tutorial 7 - sensor data/: README.md
(+3 files in other folders)
